[gd_scene load_steps=11 format=3 uid="uid://5g1pvm3q3bvm"]

[ext_resource type="Script" uid="uid://bsas2joba43mv" path="res://节点/章节节点相关/label_node.gd" id="1_yu7jq"]
[ext_resource type="Texture2D" uid="uid://7qqqcoi6np8f" path="res://tex/神秘平面占位符.png" id="2_3t7wt"]
[ext_resource type="PackedScene" uid="uid://0f0qm372ko35" path="res://节点/章节节点相关/OutputPoint.tscn" id="3_dahqs"]
[ext_resource type="StyleBox" uid="uid://cwv3spoo3ofqw" path="res://样式/白勾线尖锐面板.tres" id="3_h1pbo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ka6fl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5ny6"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xysbu"]
bg_color = Color(0.134996, 0.179445, 0.179444, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.64, 0.32, 1)
border_blend = true
corner_radius_bottom_right = 38
corner_detail = 1
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qy7oa"]
bg_color = Color(0.134996, 0.179445, 0.179444, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.64, 0.32, 1)
border_blend = true
corner_radius_top_right = 38
corner_detail = 1
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0a26"]
bg_color = Color(0.134996, 0.179445, 0.179444, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.64, 0.32, 1)
border_blend = true
corner_radius_bottom_left = 38
corner_detail = 1
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fn1g"]
bg_color = Color(0.134996, 0.179445, 0.179444, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.64, 0.32, 1)
border_blend = true
corner_radius_top_left = 38
corner_detail = 1
shadow_size = 1
shadow_offset = Vector2(0, 1)

[node name="Label_Node" type="Button"]
custom_minimum_size = Vector2(480, 250)
offset_right = 480.0
offset_bottom = 250.0
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ka6fl")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ka6fl")
script = ExtResource("1_yu7jq")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 0.999
offset_right = 0.959991
offset_bottom = 0.249985
theme_override_styles/panel = SubResource("StyleBoxFlat_a5ny6")

[node name="TextureRect" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00191667
anchor_top = -0.00336
anchor_right = 0.99475
anchor_bottom = 0.98864
offset_left = 0.92
offset_top = 0.84
offset_right = 2.51998
offset_bottom = 2.83998
texture = ExtResource("2_3t7wt")
expand_mode = 2
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="好看" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 16.0
offset_top = 160.0
offset_right = 464.0
offset_bottom = 240.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="好看"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.966786
anchor_top = 0.125
anchor_right = 1.1
anchor_bottom = 0.625
offset_left = -0.120026
offset_right = 0.199951
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xysbu")
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="好看"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.966786
anchor_top = 0.625
anchor_right = 1.1
anchor_bottom = 1.125
offset_left = -0.120026
offset_right = 0.199951
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qy7oa")
metadata/_edit_use_anchors_ = true

[node name="Panel3" type="Panel" parent="好看"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.097
anchor_top = 0.125
anchor_right = 0.033
anchor_bottom = 0.625
offset_left = -1.544
offset_right = 0.216
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t0a26")
metadata/_edit_use_anchors_ = true

[node name="Panel4" type="Panel" parent="好看"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.097
anchor_top = 0.625
anchor_right = 0.033
anchor_bottom = 1.125
offset_left = -1.54399
offset_right = 0.216001
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0fn1g")
metadata/_edit_use_anchors_ = true

[node name="Main_Panel" type="Panel" parent="."]
layout_mode = 2
offset_top = 55.0
offset_right = 480.0
offset_bottom = 195.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_h1pbo")

[node name="Key_Label" type="Label" parent="Main_Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.587
anchor_right = 1.0
anchor_bottom = 0.937
offset_top = 0.0400009
offset_bottom = 0.0399933
mouse_filter = 1
text = "键值区域"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="Name_Label" type="LineEdit" parent="Main_Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00208768
anchor_top = 0.0625
anchor_right = 0.999709
anchor_bottom = 0.6754
offset_right = 0.139435
offset_bottom = -0.0320053
mouse_filter = 1
theme_override_font_sizes/font_size = 35
text = "未命名章节"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false
flat = true
metadata/_edit_use_anchors_ = true

[node name="OutputPoint" parent="." instance=ExtResource("3_dahqs")]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 479.0
offset_top = 125.0
offset_right = 495.0
offset_bottom = 141.0

[node name="InputPoint" parent="." instance=ExtResource("3_dahqs")]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -15.0
offset_top = 125.0
offset_right = 1.0
offset_bottom = 141.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="Main_Panel/Name_Label" to="." method="_on_name_label_mouse_entered"]
[connection signal="mouse_exited" from="Main_Panel/Name_Label" to="." method="_on_name_label_mouse_exited"]
